Fix inappropriate syntaxes [ci skip]

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -590,7 +590,7 @@
 %     \cs_generate_from_arg_count:Ncnn
 %   }
 %   \begin{syntax}
-%     \cs{cs_generate_from_arg_count:NNnn} \meta{function} \meta{creator} \meta{number} \meta{code}
+%     \cs{cs_generate_from_arg_count:NNnn} \meta{function} \meta{creator} \Arg{number} \Arg{code}
 %   \end{syntax}
 %   Uses the \meta{creator} function (which should have signature
 %   |Npn|, for example \cs{cs_new:Npn}) to define a \meta{function}
@@ -1036,8 +1036,8 @@
 %
 % \begin{function}[EXP,pTF]{\cs_if_eq:NN}
 %   \begin{syntax}
-%     \cs{cs_if_eq_p:NN} \Arg{cs_1} \Arg{cs_2}
-%     \cs{cs_if_eq:NNTF} \Arg{cs_1} \Arg{cs_2} \Arg{true code} \Arg{false code}
+%     \cs{cs_if_eq_p:NN} \meta{cs_1} \meta{cs_2}
+%     \cs{cs_if_eq:NNTF} \meta{cs_1} \meta{cs_2} \Arg{true code} \Arg{false code}
 %   \end{syntax}
 %   Compares the definition of two \meta{control sequences} and
 %   is logically \texttt{true} if they are the same, \emph{i.e.}~if they have exactly
@@ -1295,7 +1295,7 @@
 %
 % \begin{function}{\__debug_patch_conditional:nNNpnn}
 %   \begin{syntax}
-%     \cs{__debug_patch_conditional:nNNpn} \Arg{before}
+%     \cs{__debug_patch_conditional:nNNpnn} \Arg{before}
 %     \meta{definition} \meta{conditional} \meta{parameters} \Arg{type} \Arg{code}
 %   \end{syntax}
 %   Similar to \cs{__debug_patch:nnNNpn} for conditionals, namely
