--- a/l3kernel/l3box.dtx
+++ b/l3kernel/l3box.dtx
@@ -336,7 +336,7 @@
 %
 % \begin{function}[added = 2012-05-11]{\box_show:Nnn, \box_show:cnn}
 %   \begin{syntax}
-%      \cs{box_show:Nnn} \meta{box} \meta{intexpr_1} \meta{intexpr_2}
+%      \cs{box_show:Nnn} \meta{box} \Arg{intexpr_1} \Arg{intexpr_2}
 %   \end{syntax}
 %   Display the contents of \meta{box} in the terminal, showing the first
 %   \meta{intexpr_1} items of the box, and descending into \meta{intexpr_2}
@@ -352,7 +352,7 @@
 %
 % \begin{function}[added = 2012-05-11]{\box_log:Nnn, \box_log:cnn}
 %   \begin{syntax}
-%      \cs{box_log:Nnn} \meta{box} \meta{intexpr_1} \meta{intexpr_2}
+%      \cs{box_log:Nnn} \meta{box} \Arg{intexpr_1} \Arg{intexpr_2}
 %   \end{syntax}
 %   Writes the contents of \meta{box} to the log, showing the first
 %   \meta{intexpr_1} items of the box, and descending into \meta{intexpr_2}
