--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -405,7 +405,7 @@
 %     \__driver_draw_color_rgb_stroke:nnn
 %   }
 %   \begin{syntax}
-%     \cs{__driver_draw_color_gray:n} \Arg{red} \Arg{green} \Arg{blue}
+%     \cs{__driver_draw_color_rgb:nnn} \Arg{red} \Arg{green} \Arg{blue}
 %   \end{syntax}
 %   Sets the color for drawing to the RGB values specified, all of which are
 %   fp expressions which should evaluate to between $0$ and $1$. The
