--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -475,7 +475,7 @@
 %     \exp_last_unbraced:NnNo
 %     }
 %   \begin{syntax}
-%     \cs{exp_last_unbraced:Nno} \meta{token} \meta{tokens_1} \meta{tokens_2}
+%     \cs{exp_last_unbraced:Nno} \meta{token} \Arg{tokens_1} \Arg{tokens_2}
 %   \end{syntax}
 %   These functions absorb the number of arguments given by their
 %   specification, carry out the expansion
@@ -503,7 +503,7 @@
 %
 % \begin{function}[EXP]{\exp_last_two_unbraced:Noo}
 %   \begin{syntax}
-%     \cs{exp_last_two_unbraced:Noo} \meta{token} \meta{tokens_1} \Arg{tokens_2}
+%     \cs{exp_last_two_unbraced:Noo} \meta{token} \Arg{tokens_1} \Arg{tokens_2}
 %   \end{syntax}
 %   This function absorbs three arguments and expand the second and third
 %   once. The first argument of the function is then the next item on the
