--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -348,7 +348,7 @@
 %
 % \begin{function}[added = 2012-02-11]{\ior_str_map_inline:Nn}
 %   \begin{syntax}
-%     \cs{ior_str_map_inline:Nn} \Arg{stream} \Arg{inline function}
+%     \cs{ior_str_map_inline:Nn} \meta{stream} \Arg{inline function}
 %   \end{syntax}
 %   Applies the \meta{inline function} to every \meta{line}
 %   in the \meta{stream}. The material is read from the \meta{stream}
