--- a/l3kernel/l3fp-aux.dtx
+++ b/l3kernel/l3fp-aux.dtx
@@ -689,7 +689,7 @@
 % ^^A begin[todo]
 % \begin{macro}[int, EXP]{\@@_decimate:nNnnnn}
 %   \begin{syntax}
-%     \cs{@@_decimate:nNnnnn} \Arg{shift} \Arg{f_1}
+%     \cs{@@_decimate:nNnnnn} \Arg{shift} \meta{f_1}
 %     ~~\Arg{X_1} \Arg{X_2} \Arg{X_3} \Arg{X_4}
 %   \end{syntax}
 %   Each \meta{X_i} consists in $4$ digits exactly,
