--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -584,7 +584,7 @@
 %   \begin{syntax}
 %     \cs{int_to_symbols:nnn}
 %     ~~\Arg{integer expression} \Arg{total symbols}
-%     ~~\meta{value to symbol mapping}
+%     ~~\Arg{value to symbol mapping}
 %   \end{syntax}
 %   This is the low-level function for conversion of an
 %   \meta{integer expression} into a symbolic form (often
