--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -755,8 +755,8 @@
 % \begin{function}[updated = 2012-09-09]
 %   {\__msg_show_item:n, \__msg_show_item:nn, \__msg_show_item_unbraced:nn}
 %   \begin{syntax}
-%     \cs{__msg_show_item:n}  \meta{item}
-%     \cs{__msg_show_item:nn} \meta{item-key} \meta{item-value}
+%     \cs{__msg_show_item:n}  \Arg{item}
+%     \cs{__msg_show_item:nn} \Arg{item-key} \Arg{item-value}
 %   \end{syntax}
 %   Auxiliary functions used within the last argument of
 %   \cs{__msg_show_variable:NNNnn} or \cs{__msg_show_wrap:n}
