--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -679,7 +679,7 @@
 %
 % \begin{function}[EXP]{\__prg_break_point:Nn}
 %   \begin{syntax}
-%     \cs{__prg_break_point:Nn} \cs[no-index]{\meta{type}_map_break:} \meta{tokens}
+%     \cs{__prg_break_point:Nn} \cs[no-index]{\meta{type}_map_break:} \Arg{tokens}
 %   \end{syntax}
 %   Used to mark the end of a recursion or mapping: the functions
 %   \cs[no-index]{\meta{type}_map_break:} and \cs[no-index]{\meta{type}_map_break:n} use
