--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -655,7 +655,7 @@
 % \begin{function}[EXP,pTF]{\skip_if_eq:nn}
 %   \begin{syntax}
 %     \cs{skip_if_eq_p:nn} \Arg{skipexpr_1} \Arg{skipexpr_2}
-%     \cs{dim_compare:nTF}
+%     \cs{dim_compare:nnTF}
 %     ~~\Arg{skipexpr_1} \Arg{skipexpr_2}
 %     ~~\Arg{true code} \Arg{false code}
 %   \end{syntax}
