--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -408,7 +408,7 @@
 % \begin{function}[added = 2017-10-08, rEXP]
 %   {\str_map_function:nN}
 %   \begin{syntax}
-%     \cs{str_map_function:nN} \meta{string} \meta{function}
+%     \cs{str_map_function:nN} \Arg{string} \meta{function}
 %   \end{syntax}
 %   Applies \meta{function} to every \meta{item} in the \meta{string}.
 %   See also \cs{str_map_function:nN}.
@@ -428,7 +428,7 @@
 % \begin{function}[added = 2017-10-08]
 %   {\str_map_inline:nn}
 %   \begin{syntax}
-%     \cs{str_map_inline:Nn} \meta{string} \Arg{inline function}
+%     \cs{str_map_inline:nn} \Arg{string} \Arg{inline function}
 %   \end{syntax}
 %   Applies the \meta{inline function} to every \meta{item} in the
 %   \meta{string}. The \meta{inline function} should consist of code which
@@ -451,7 +451,7 @@
 % \begin{function}[added = 2017-10-08]
 %   {\str_map_variable:nNn}
 %   \begin{syntax}
-%     \cs{str_map_variable:nNn} \meta{string} \meta{variable} \Arg{function}
+%     \cs{str_map_variable:nNn} \Arg{string} \meta{variable} \Arg{function}
 %   \end{syntax}
 %   Applies the \meta{function} to every \meta{item} in the \meta{string}.
 %   The \meta{function} should consist of code
