--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -498,7 +498,7 @@
 %
 % \begin{function}[updated = 2012-06-29, rEXP]{\tl_map_function:nN}
 %   \begin{syntax}
-%     \cs{tl_map_function:nN} \meta{token list} \meta{function}
+%     \cs{tl_map_function:nN} \Arg{token list} \meta{function}
 %   \end{syntax}
 %   Applies \meta{function} to every \meta{item} in the \meta{token list},
 %   The \meta{function} receives one argument for each iteration.
@@ -520,7 +520,7 @@
 %
 % \begin{function}[updated = 2012-06-29]{\tl_map_inline:nn}
 %   \begin{syntax}
-%     \cs{tl_map_inline:nn} \meta{token list} \Arg{inline function}
+%     \cs{tl_map_inline:nn} \Arg{token list} \Arg{inline function}
 %   \end{syntax}
 %   Applies the \meta{inline function} to every \meta{item} stored within the
 %   \meta{token list}. The \meta{inline function}  should consist of code which
@@ -542,7 +542,7 @@
 %
 % \begin{function}[updated = 2012-06-29]{\tl_map_variable:nNn}
 %   \begin{syntax}
-%     \cs{tl_map_variable:nNn} \meta{token list} \meta{variable} \Arg{function}
+%     \cs{tl_map_variable:nNn} \Arg{token list} \meta{variable} \Arg{function}
 %   \end{syntax}
 %   Applies the \meta{function} to every \meta{item} stored
 %   within the \meta{token list}. The \meta{function} should consist of code
@@ -1003,7 +1003,7 @@
 %
 % \begin{function}[updated = 2015-08-07]{\tl_show:n}
 %   \begin{syntax}
-%     \cs{tl_show:n} \meta{token list}
+%     \cs{tl_show:n} \Arg{token list}
 %   \end{syntax}
 %   Displays the \meta{token list} on the terminal.
 %   \begin{texnote}
