--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -2061,7 +2061,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[pTF, EXP]{\tl_if_novalue:n}
+% \begin{macro}[TF, EXP]{\tl_if_novalue:n}
 % \begin{macro}[EXP]{\@@_if_novalue:w}
 %   Tests for |-NoValue-|: this is similar to \cs{tl_if_in:nn} but set
 %   up to be expandable and to check the value exactly.  The question
@@ -2070,7 +2070,7 @@
 \use:x
   {
     \prg_new_conditional:Npnn \exp_not:N \tl_if_novalue:n ##1
-      { p , T ,  F , TF }
+      { T ,  F , TF }
       {
         \exp_not:N \str_if_eq:onTF
           {
